--- a/currentmember/webshop/src/templates/shop.html
+++ b/currentmember/webshop/src/templates/shop.html
@@ -72,7 +72,11 @@
                         <div id="card-errors" role="alert"></div>
                     </div>
 
-                    <input type="submit" id="pay-button" class="uk-button uk-button-default uk-button-primary" value="Betala 273kr"/>
+                    <button type="submit" id="pay-button" class="uk-button uk-button-default uk-button-primary" value="Betala 273kr">
+                        <div class="pay-spinner" uk-spinner></div>
+                        <span>Betala 273kr</span>
+                    </button>
+                    </form>
                 </form>
             </form>
         </div>
