--- a/currentmember/webshop/src/templates/shop.html
+++ b/currentmember/webshop/src/templates/shop.html
@@ -72,9 +72,9 @@
                         <div id="card-errors" role="alert"></div>
                     </div>
 
-                    <button type="submit" id="pay-button" class="uk-button uk-button-default uk-button-primary" value="Betala 273kr">
+                    <button type="submit" id="pay-button" class="uk-button uk-button-default uk-button-primary">
                         <div class="pay-spinner" uk-spinner></div>
-                        <span>Betala 273kr</span>
+                        <span>Betala</span>
                     </button>
                     </form>
                 </form>
