--- a/currentmember/webshop/src/static/style.scss
+++ b/currentmember/webshop/src/static/style.scss
@@ -400,13 +400,6 @@ $footer-height: 240px;
 	}
 }
 
-.receipt-amount {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	text-align: right;
-	font-size: 24pt;
-}
-
 #receipt {
 	padding-top: 100px;
 	box-sizing: content-box;
@@ -416,6 +409,14 @@ $footer-height: 240px;
 	padding-right: 20px;
 	margin-left: auto;
 	margin-right: auto;
+
+	.receipt-amount {
+		margin-top: 20px;
+		margin-bottom: 20px;
+		text-align: right;
+		font-size: 24pt;
+	}
+
 
 	.receipt-buttons {
 		text-align: center;
@@ -447,3 +448,59 @@ $footer-height: 240px;
 	color: #CCC;
 }
 
+#purchase-history {
+	padding-top: 100px;
+	box-sizing: content-box;
+	min-width: 400px;
+	max-width: 580px;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-left: auto;
+	margin-right: auto;
+
+	h3 {
+		background: #469ABE;
+		margin-bottom: 0px;
+
+		padding-left: 20px;
+		padding-right: 20px;
+		padding-bottom: 5px;
+		padding-top: 5px;
+
+		font-size: 16pt;
+		color: #FFF;
+	}
+
+	.history-item {
+		color: #fff;
+		overflow: hidden;
+		border-radius: 4px;
+		margin-bottom: 20px;
+
+		box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
+
+		.receipt-items {
+			background: #2785AD;
+			padding-left: 20px;
+			padding-right: 20px;
+			padding-top: 10px;
+			padding-bottom: 10px;
+		}
+
+		.receipt-item {
+			border-bottom: none;
+		}
+	}
+
+	.receipt-amount {
+		background: #07719F;
+		margin-top: 0px;
+		margin-bottom: 0px;
+		padding-right: 20px;
+		padding-top: 5px;
+		padding-bottom: 5px;
+
+		text-align: right;
+		font-size: 18pt;
+	}
+}
