Added links to history page

--- a/currentmember/webshop/src/static/style.scss
+++ b/currentmember/webshop/src/static/style.scss
@@ -471,6 +471,14 @@ $footer-height: 240px;
 		color: #FFF;
 	}
 
+	h1 {
+		margin-bottom: 0px;
+	}
+
+	.receipt-buttons {
+		color: #8bbdef;
+	}
+
 	.history-item {
 		color: #fff;
 		overflow: hidden;
