--- a/currentmember/webshop/src/templates/shop.html
+++ b/currentmember/webshop/src/templates/shop.html
@@ -29,7 +29,7 @@
                             <button data-id="{{ cat.id }}" class="category-delete edit uk-button uk-button-danger uk-button-small" uk-icon="trash"></button>
                         </li>
                     {% endfor %}
-                    <button class="uk-button uk-button-primary uk-button-small edit category-add" uk-icon="plus"></button>
+                    <button type="button" class="uk-button uk-button-primary uk-button-small edit category-add" uk-icon="plus"></button>
                 </ul>
 
             </div>
@@ -73,7 +73,7 @@
                     </div>
 
                     <button type="submit" id="pay-button" class="uk-button uk-button-default uk-button-primary">
-                        <div class="pay-spinner" uk-spinner></div>
+                        <div class="progress-spinner" uk-spinner></div>
                         <span>Betala</span>
                     </button>
                     </form>
