Remove address from registration form

--- a/currentmember/webshop/src/templates/register.html
+++ b/currentmember/webshop/src/templates/register.html
@@ -39,7 +39,7 @@
                 <label for="phone" class="uk-form-label">Telefonnummer</label>
                 <input id="phone" class="uk-input" type="text" placeholder="" />
             </div>
-            <div>
+            <!-- <div>
                 <label for="address_street" class="uk-form-label">Address</label>
                 <input id="address_street" class="uk-input" type="text" placeholder="" />
             </div>
@@ -54,7 +54,7 @@
             <div class="uk-margin-bottom">
                 <label for="address_city" class="uk-form-label">Postort</label>
                 <input id="address_city" class="uk-input" type="text" placeholder="" />
-            </div>
+            </div> -->
 
             {% for product in products %}
             <div>
