Move stripe keys to .env file

--- a/currentmember/webshop/src/templates/product_edit.html
+++ b/currentmember/webshop/src/templates/product_edit.html
@@ -15,6 +15,7 @@
         <script id="action-data", type="application/json">
             {{ action_json|safe }}
         </script>
+        {% include 'meta.html' %}
     </head>
     <body>
         <form class="product-edit-form uk-form-stacked uk-margin-bottom">
