--- a/currentmember/webshop/src/templates/register.html
+++ b/currentmember/webshop/src/templates/register.html
@@ -16,6 +16,7 @@
         <script id="product-data", type="application/json">
             {{ product_json|safe }}
         </script>
+        {% include 'meta.html' %}
     </head>
     <body>
         <form class="product-edit-form uk-form-stacked uk-margin-xlarge-bottom">
