--- a/currentmember/webshop/src/templates/receipt.html
+++ b/currentmember/webshop/src/templates/receipt.html
@@ -11,6 +11,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
               integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
               crossorigin="anonymous"></script>
+        {% include 'meta.html' %}
     </head>
     <body>
         <div id="receipt">
