--- a/currentmember/webshop/src/templates/shop.html
+++ b/currentmember/webshop/src/templates/shop.html
@@ -16,6 +16,7 @@
         <script id="product-data", type="application/json">
             {{ product_json|safe }}
         </script>
+        {% include 'meta.html' %}
     </head>
     <body>
         <div id="root">
