--- a/currentmember/webshop/src/templates/meta.html
+++ b/currentmember/webshop/src/templates/meta.html
@@ -1,4 +1,4 @@
 <script>
-    window.stripeKey = {{ meta.stripePublicKey }};
-    window.apiBasePath = {{ meta.apiBasePath }};
+    window.stripeKey = "{{ meta.stripePublicKey }}";
+    window.apiBasePath = "{{ meta.apiBasePath }}";
 </script>
