--- a/currentmember/webshop/src/templates/shop.html
+++ b/currentmember/webshop/src/templates/shop.html
@@ -63,7 +63,7 @@
                     <h3>Du är inte inloggad</h3>
                     <form class="uk-form-stacked">
                         <input required id="email" class="uk-input" type="text" placeholder="Email" />
-                        <button id="login-button" type="button" class="uk-button uk-button-default uk-button-primary">
+                        <button id="login-button" type="submit" class="uk-button uk-button-default uk-button-primary">
                             Logga in
                         </button>
                     </form>
